# audiobook-converter

./: .gitignore  Makefile  README.md  audiobook.spec  pyproject.toml
config/: pronunciations.yaml  voices.yaml
src/audiobook/: __init__.py  __main__.py  attribution.py  cli.py  emotion.py  emotion_analyzer.py  emotion_cli.py  emotion_edit.py  emotion_lexicon.py  interactive.py  package.py  parser.py  pronounce.py  review_cli.py  stitch.py  synth.py  voice_cli.py  voice_library.py
src/audiobook/backends/: __init__.py  base.py  chatterbox.py  cloning.py  kokoro.py  xtts.py
src/audiobook/review/: __init__.py  align.py  emotion_check.py  fixer.py  metrics.py  reviewer.py  transcribe.py  types.py
src/audiobook/training/: __init__.py  cli.py  dataset.py  infer.py  train.py
